ContextMenu: now also scrollTable uses new context menus +  some styling
svn changeset:998 branch:trunk

--- a/WebContent/WEB-INF/lib/themes/base/css/ie-extra.css
+++ b/WebContent/WEB-INF/lib/themes/base/css/ie-extra.css
@@ -1,6 +1,10 @@
-/** This file is for fixing Safari oddities */
+/** This file is for fixing IE oddities */
 .itmtk .modalityCurtain {
-	filter:alpha(opacity=10);
+	filter:alpha(opacity=20);
+}
+
+.itmtk .modalityCurtain.cmModalityCurtain {
+	filter:alpha(opacity=0);
 }
 
 .itmtk .contextMenu {
