--- a/WebContent/WEB-INF/lib/themes/base/css/base-ajax.css
+++ b/WebContent/WEB-INF/lib/themes/base/css/base-ajax.css
@@ -911,7 +911,8 @@ IMG.overlay {
 	background: url('../img/window/resizer_bg.gif') no-repeat;
 	cursor: SE-resize;
 }
-.itmtk .window .shadow {
+.itmtk .window .shadow,
+.itmtk .contextMenu .shadow {
 	position:absolute;	
 	background: #aaa;
 }
@@ -958,10 +959,16 @@ IMG.overlay {
 	float:left;
 	clear:left;
 }
+.itmtk .modalityCurtain.cmModalityCurtain {
+	position:absolute;
+	/* TODO remove debug color, should be trasparent by default */
+	background: #000;
+	opacity:0;
+}
 
 .itmtk .modalityCurtain {
 	position:absolute;
 	/* TODO remove debug color, should be trasparent by default */
 	background: #000;
-	opacity:0.1;
+	opacity:0.2;
 }
