Fixed base theme shadow on Mac FF
svn changeset:1039 branch:trunk

--- a/WebContent/WEB-INF/lib/themes/base/css/base-ajax.css
+++ b/WebContent/WEB-INF/lib/themes/base/css/base-ajax.css
@@ -918,10 +918,7 @@ IMG.overlay {
 }
 /* shadow helpers are not used in base theme, make them act so that IE 6 don't get fool */
 .itmtk .window .shadow div {
-	width:1px;
-	height:1px;
-	display:inline;
-	float:left;	
+	display:none;
 }
 .itmtk .window .winBody .open {
 	height:100%;	
