added horizontal option group style
svn changeset:1239 branch:trunk

--- a/WebContent/WEB-INF/lib/themes/base/css/base-ajax.css
+++ b/WebContent/WEB-INF/lib/themes/base/css/base-ajax.css
@@ -245,6 +245,10 @@ IMG.overlay {
 	margin-left: 1.2em;
 	margin-top: 0.3em;
 }
+.itmtk .select-horizontalOptiongroup div.nobr {
+ 	display: inline;
+ 	margin-right:1.5em;
+ }
 .itmtk .select-twincol {
 	width: 350px;
 }
