Implemented icons to Tree components context menu
svn changeset:1318 branch:trunk

--- a/WebContent/WEB-INF/lib/themes/base/css/base-ajax.css
+++ b/WebContent/WEB-INF/lib/themes/base/css/base-ajax.css
@@ -80,7 +80,8 @@ INPUT, SELECT, SELECT OPTION, TEXTAREA {
 .itmtk .caption {
     color: ButtonText;
 }
-.itmtk .caption .icon {
+.itmtk .caption .icon,
+.itmtk .contextMenu .icon {
 	vertical-align: middle;
 	padding-right: 5px;
 }
