--- a/WebContent/WEB-INF/lib/themes/base/css/base-ajax.css
+++ b/WebContent/WEB-INF/lib/themes/base/css/base-ajax.css
@@ -707,85 +707,56 @@ IMG.overlay {
 
 /* Select in lazy loading mode */
 
-.itmtk .filterselect .fslayout {
-	padding: 0px;
-	margin: 2px;
-	border: none;
+.itmtk .filterselect .fssearch-layout {
+	height: 20px;
 }
 
-.itmtk .filterselect TABLE {
-	border-collapse: separate !important;
-	border-collapse: collapse;
-	padding: 0px;
-	margin: 0px;
-	border-spacing: 0px;
-}
-
-.itmtk .filterselect .fssearch-layout TD {	
-	padding: 0px;
-	margin: 0px;	
+.itmtk .filterselect .input {
+	float:left;
+	height: 14px;
+	padding: 2px;
+	border: 1px solid #aaaaaa;
+	border-right: none;
+	background-color: ThreeDHighlight;
 }
 
 .itmtk .filterselect .fsinput {
-	padding: 2px;
-	padding-left: 3px;
-	margin-top: 1px !important;
-	margin-top: 1px;	
-	vertical-align: top;
-	border-right: 1px solid #aaaaaa;
-	border-left: 1px solid #aaaaaa;
-	border-top: 1px solid #aaaaaa;
-	border-bottom: 1px solid #aaaaaa;
+	border: none;
+	margin: 0;
+	padding: 0;
+	height: 14px;
 }
 
-
-.itmtk .filterselect .toggle-bg {
-	width: 19px;
-	height: 20px;	
-	margin: 0px;		
-	padding: 0px;
-	background-image: url('../img/filterselect/dropdown.gif');
-	background-repeat: no-repeat;
-	background-position: center;
+.itmtk .filterselect .toggle-btn {
+	width: 18px;
+	height: 18px;
+	float:left;
+	border: 1px solid #aaaaaa;
+	border-left: none;
+	background-color: ThreeDHighlight;
 }
 
 .itmtk .filterselect .toggle {
-	width: 19px;
-	height: 20px;	
-	margin: 0px;
-	margin-top: 1px !important;
-	margin-left: 0px; 
-	padding: 0px;
-	background-image: url('../img/filterselect/dropdown.gif');
-	background-repeat: no-repeat;
+	display: block;
+	width: 18px;
+	height: 18px;
+	background: transparent url(../img/filterselect/dropdown.gif) no-repeat 0 -1px;
 }
 
 .itmtk .filterselect .toggle-selected {
-	width: 19px;
-	height: 20px;	
-	margin: 0px;
-	margin-top: 1px !important;
-	margin-left: 0px; 
-	padding: 0px;
-	background-image: url('../img/filterselect/dropdown-hover.gif');
-	background-repeat: no-repeat;
+	display: block;
+	width: 18px;
+	height: 18px;
+	background: transparent url(../img/filterselect/dropdown-hover.gif) no-repeat 0 -1px;
 }
 
 .itmtk .filterselect .highlighted {
-	background-image: url('../img/filterselect/dropdown-hover.gif');
-	background-repeat: no-repeat;
+	background: transparent url(../img/filterselect/dropdown-hover.gif) no-repeat 0 -1px;
 }
 
 .itmtk .filterselect .over {
-	cursor: hand;
-	cursor: pointer !important;
-}
-
-.itmtk .filterselect .layout {	
-	height: 100%;
-	width: 100%;
-	margin: 0px;
-	padding: 0px;
+	cursor: pointer;
+	border: none;
 }
 
 .itmtk .filterselect .fspopup {
@@ -797,103 +768,69 @@ IMG.overlay {
 .itmtk .filterselect .fspopup-show {
 	position: absolute;	
 	z-index: 20000;
+	background-color: ThreeDHighlight;
 	border-left: 1px solid #aaaaaa;
 	border-right: 1px solid #aaaaaa;
+	clear: left;
 }
 
-.itmtk .filterselect .layout {
-	background-color: white;
-	margin: 0px;
-	padding: 0px;
-	clear: both;
+.itmtk .filterselect .page-up,
+.itmtk .filterselect .page-down {
+	border-bottom: 1px solid #aaa;
+	background-color: #a6b8d6;
 }
 
-.itmtk .filterselect .fsup {
-	border-top: 1px solid;
-	border-bottom: 1px solid;
-	border-color: #aaa #000 #000 #aaa;	
-	background: #a6b8d6;
-	background-image: url('../img/filterselect/up.gif');
-	background-position: center;
-	background-repeat: no-repeat;
-	cursor: hand;
-	cursor: pointer !important;
-	padding: 5px;
+.itmtk .filterselect .page-down {
+	border-top: 1px solid #aaa;
+}
+
+.itmtk .filterselect .page-up span,
+.itmtk .filterselect .page-down span {
+	display: block;
+	width: 100%;
+	height: 10px;
+	background: transparent url(../img/filterselect/up.gif) no-repeat 50% 50%;
+	cursor: pointer;
 	text-align: right; /* IE event fix */
 }
 
-.itmtk .filterselect .fsdown {	
-	border-top: 1px solid;
-	border-bottom: 1px solid;
-	border-color: #aaa #000 #000 #aaa;	
-	background: #a6b8d6;
-	background-image: url('../img/filterselect/down.gif');
-	background-position: center;
-	background-repeat: no-repeat;
-	cursor: hand;
-	cursor: pointer !important;
-	padding: 5px;
-	text-align: right; /* IE event fix */
+.itmtk .filterselect .page-down span {
+	background: #a6b8d6 url(../img/filterselect/down.gif) no-repeat 50% 50%;
 }
 
-.itmtk .filterselect .over .fsdown  {	
+.itmtk .filterselect .over span {
 	background-color: orange;
-	border-color: #000 #aaa #aaa #000;
-}
-.itmtk .filterselect .over {
-		border: none;
-		margin: 0px;
-		padding: 0px;
-}
-.itmtk .filterselect .over .fsup  {
-	background-color: orange;
-	border-color: #000 #aaa #aaa #000;
 }
 
-.itmtk .filterselect .layout .disabled, 
-.itmtk .filterselect .layout .over .disabled {
-	background-color: #8e8e8e;
-	border-color: #000 #aaa #aaa #000;
-	opacity: 1.0;
-    filter: alpha(opacity=100);
+.itmtk .filterselect .over .disabled {
+	background-color: transparent;
 }
 
 .itmtk .filterselect .selectbox {
-	margin: 0px;
-	padding: 0px;
+	margin: 0;
+	padding: 0;
 	width: 100%;
-	background-color: #ffffff;
 }
 
 .itmtk .filterselect .selectbox-row {
-	margin: 0px;
-	padding: 0px 3px 0px 3px;
-	border: none;
-	background-color: #ffffff;	
-	cursor: hand;
-	cursor: pointer !important;
+	margin: 0;
+	padding: 0 3px;
+	cursor: pointer;
 }
 
-.itmtk .filterselect .selectedrow {	
-	background-color: #b1b1b1;	
+.itmtk .filterselect .selectedrow {
+	background-color: #b1b1b1;
 	color: white;
-	border: none;
-}
-
-.itmtk .filterselect .unselectedrow {	
-	background-color: white;	
 }
 
 .itmtk .filterselect .selectbox .over {	
 	background-color: #DCECFD;
 	color: black;
-	border: none;
 }
 
-.itmtk .filterselect .statics {
-	font-size: 12px;
+.itmtk .filterselect .stats {
 	border-bottom: 1px solid #aaaaaa;
-	background-color: #ffffff;
+	background-color: ThreeDHighlight;
 	text-align: center;
 }
 
