--- a/WebContent/WEB-INF/lib/themes/base/css/base-ajax.css
+++ b/WebContent/WEB-INF/lib/themes/base/css/base-ajax.css
@@ -708,50 +708,25 @@ IMG.overlay {
 /* Select in lazy loading mode */
 
 .itmtk .filterselect .fssearch-layout {
-	height: 20px;
-}
-
-.itmtk .filterselect .input {
-	float:left;
-	height: 14px;
-	padding: 2px;
+	height: 18px;
 	border: 1px solid #aaaaaa;
-	border-right: none;
 	background-color: ThreeDHighlight;
+	white-space: nowrap;
+	padding-right: 22px;
 }
 
 .itmtk .filterselect .fsinput {
 	border: none;
 	margin: 0;
-	padding: 0;
+	padding: 2px;
+	width: 100%;
 	height: 14px;
 }
 
-.itmtk .filterselect .toggle-btn {
-	width: 18px;
-	height: 18px;
-	float:left;
-	border: 1px solid #aaaaaa;
-	border-left: none;
-	background-color: ThreeDHighlight;
-}
-
 .itmtk .filterselect .toggle {
-	display: block;
-	width: 18px;
-	height: 18px;
-	background: transparent url(../img/filterselect/dropdown.gif) no-repeat 0 -1px;
-}
-
-.itmtk .filterselect .toggle-selected {
-	display: block;
-	width: 18px;
-	height: 18px;
-	background: transparent url(../img/filterselect/dropdown-hover.gif) no-repeat 0 -1px;
-}
-
-.itmtk .filterselect .highlighted {
-	background: transparent url(../img/filterselect/dropdown-hover.gif) no-repeat 0 -1px;
+	vertical-align: top;
+	cursor: pointer;
+	margin-top: -1px;
 }
 
 .itmtk .filterselect .over {
@@ -762,12 +737,11 @@ IMG.overlay {
 .itmtk .filterselect .fspopup {
 	position: absolute;	
 	display: none;
-	z-index: 20000;
 }
 
 .itmtk .filterselect .fspopup-show {
-	position: absolute;	
-	z-index: 20000;
+	position: absolute;
+	z-index: 200000;
 	background-color: ThreeDHighlight;
 	border-left: 1px solid #aaaaaa;
 	border-right: 1px solid #aaaaaa;
@@ -830,7 +804,6 @@ IMG.overlay {
 
 .itmtk .filterselect .stats {
 	border-bottom: 1px solid #aaaaaa;
-	background-color: ThreeDHighlight;
 	text-align: center;
 }
 
