--- a/WebContent/WEB-INF/lib/themes/base/css/base-ajax.css
+++ b/WebContent/WEB-INF/lib/themes/base/css/base-ajax.css
@@ -750,7 +750,7 @@ IMG.overlay {
 .itmtk .fspopupcont .fspopup-show .page-down {
 	border: 1px solid ThreeDHighlight;
 	border-bottom: 1px solid ThreeDShadow;
-	border-right-color: transparent;
+	border-right-color: ThreeDFace;
 	background-color: ThreeDFace;
 }
 
@@ -765,7 +765,7 @@ IMG.overlay {
 	background: transparent url(../img/filterselect/up.gif) no-repeat 50% 50%;
 	cursor: pointer;
 	text-align: right; /* IE event fix */
-	border: 1px solid transparent;
+	border: 1px solid ThreeDFace;
 	border-bottom: none;
 }
 
