IE6 specific rules for filterselect.
svn changeset:1518 branch:trunk

--- a/WebContent/WEB-INF/lib/themes/base/css/ie-extra.css
+++ b/WebContent/WEB-INF/lib/themes/base/css/ie-extra.css
@@ -16,3 +16,11 @@
 	/* workaround for IE z-index bug */
 	z-index:31002;
 }
+
+/* FilterSelect styles for IE6 */
+* html .itmtk .filterselect .fssearch-layout {
+	padding: 0;
+}
+* html .itmtk .filterselect .fssearch-layout .fsinput {
+	margin-right: -20px;
+}
