--- a/src/com/itmill/toolkit/terminal/gwt/public/component-themes/common/css/common.css
+++ b/src/com/itmill/toolkit/terminal/gwt/public/component-themes/common/css/common.css
@@ -5,3 +5,13 @@ body {
 	font-size: 62.5%;
 	line-height: 1.4em;
 }
+
+input, select, textarea, button {
+	font-family: helvetica, verdana, tahoma, arial, sans-serif;
+	font-size: 1.1em;
+}
+
+select {
+	padding: 0;
+	margin: 0;
+}
