--- a/src/com/itmill/toolkit/terminal/gwt/public/component-themes/textfield/css/textfield.css
+++ b/src/com/itmill/toolkit/terminal/gwt/public/component-themes/textfield/css/textfield.css
@@ -4,6 +4,7 @@
 	background: #fff url(../img/bg.png) repeat-x;
 	padding: 2px;
 	border: 1px solid #b6b6b6;
+	border-top-color: #9d9d9d;
 	border-bottom-color: #d6d6d6;
 	border-right-color: #d6d6d6;
 	margin: 0;
