New IPanel implementation with 3 different styles (default, light, strong). New component IComponent for default component implementation. Implemented ITree without a caption (container now takes care of it) and fixed a bug in ITree.
svn changeset:1756 branch:trunk

--- a/src/com/itmill/toolkit/terminal/gwt/public/component-themes/collection.css
+++ b/src/com/itmill/toolkit/terminal/gwt/public/component-themes/collection.css
@@ -1,3 +1,4 @@
 @import "common/css/common.css";
 @import "textfield/css/textfield.css";
 @import "select/css/select.css";
+@import "panel/css/panel.css";
