--- a/src/com/itmill/toolkit/terminal/gwt/public/component-themes/common/css/common.css
+++ b/src/com/itmill/toolkit/terminal/gwt/public/component-themes/common/css/common.css
@@ -1,5 +1,5 @@
 body {
-	background-color: #fff;
+	background: #fafafc url(../img/window-bg.png) repeat-x;
 	font-family: helvetica, verdana, tahoma, arial, sans-serif;
 	color: #222;
 	font-size: 62.5%;
